--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,7 +7,7 @@ license = ""
 repository = ""
 default-run = "app"
 edition = "2021"
-rust-version = "1.59"
+rust-version = "1.65"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,10 +17,14 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 anyhow = "1.0.69"
 log = "0.4.17"
+md5 = "0.7.0"
+prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["sqlite", "migrations", "specta", "mocking"] }
 serde_json = "1.0"
 serde-error = "0.1.2"
 serde = { version = "1.0", features = ["derive"] }
+specta = "1.0.0"
 tauri = { version = "1.2.4", features = ["dialog-all", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-write-file", "global-shortcut-all", "http-all", "os-all", "path-all", "process-all", "window-all"] }
+tauri-specta = { version = "1.0.0", features = ["typescript"] }
 tokio = { version = "1.25.0", features = ["full"] }
 
 [features]
