--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,10 @@ rust-version = "1.65"
 [build-dependencies]
 tauri-build = { version = "1.2.1", features = [] }
 
+[[bin]]
+name = "specta"
+path = "src/bin/specta.rs"
+
 [dependencies]
 anyhow = "1.0.69"
 dotenv = "0.15.0"
